patch making libcurl multilib ready
This git commit corresponds to 0101-curl-7.29.0-multilib.patch in
dist-git.

--- a/curl-config.in
+++ b/curl-config.in
@@ -75,7 +75,7 @@ while test $# -gt 0; do
 	;;
 
     --cc)
-	echo "@CC@"
+	echo "gcc"
 	;;
 
     --prefix)
@@ -142,24 +142,14 @@ while test $# -gt 0; do
        	;;
 
     --libs)
-	if test "X@libdir@" != "X/usr/lib" -a "X@libdir@" != "X/usr/lib64"; then
-	   CURLLIBDIR="-L@libdir@ "
-	else
-	   CURLLIBDIR=""
-	fi
-	if test "X@REQUIRE_LIB_DEPS@" = "Xyes"; then
-	  echo ${CURLLIBDIR}-lcurl @LIBCURL_LIBS@
-	else
-	  echo ${CURLLIBDIR}-lcurl
-	fi
+	pkg-config libcurl --libs
 	;;
 
     --static-libs)
-	echo @libdir@/libcurl.@libext@ @LDFLAGS@ @LIBCURL_LIBS@
 	;;
 
     --configure)
-      echo @CONFIGURE_OPTIONS@
+      pkg-config libcurl --variable=configure_options | sed 's/^"//;s/"$//'
     ;;
 
     *)
