--- a/libcurl.pc.in
+++ b/libcurl.pc.in
@@ -29,6 +29,7 @@ libdir=@libdir@
 includedir=@includedir@
 supported_protocols="@SUPPORT_PROTOCOLS@"
 supported_features="@SUPPORT_FEATURES@"
+configure_options=@CONFIGURE_OPTIONS@
 
 Name: libcurl
 URL: http://curl.haxx.se/
